<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/listDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/custom_text_color"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:text="@string/list_dialog_title"
        />

    <AutoCompleteTextView
        android:id="@+id/listDialogItemName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listDialogTitle"
        android:layout_margin="5dp"
        android:hint="@string/inventory_item_name"
        />

    <EditText
        android:id="@+id/listDialogItemQuantity"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="number"
        android:layout_below="@+id/listDialogTitle"
        android:layout_toEndOf="@+id/listDialogItemName"
        android:hint="@string/list_quantity_hint"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/listDialogNotesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/listDialogItemName"
        android:hint="@string/list_notes_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/listDialogNotes"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="@color/custom_text_color"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/listDialogCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_cancel_btn"
        android:layout_below="@+id/listDialogNotesLayout"
        />

    <Button
        android:id="@+id/listDialogAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_add_btn"
        android:layout_below="@+id/listDialogNotesLayout"
        android:layout_alignEnd="@id/listDialogItemQuantity"
        />

</RelativeLayout>