<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/schedulerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/custom_text_color"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:text="@string/scheduler_title"
        />

    <TextView
        android:id="@+id/schedulerWeekTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/custom_text_color"
        android:layout_below="@+id/schedulerTitle"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/scheduler_week_title"
        />

    <TextView
        android:id="@+id/schedulerDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/schedulerWeekTitle"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/scheduler_default_week_range"
        />

    <LinearLayout
        android:id="@+id/schedulerCalendarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/schedulerDateTitle"
        >

        <CalendarView
            android:id="@+id/schedulerCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/schedulerRecyclerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/schedulerCalendarContainer"
        >

        <apps.nerdyginger.pocketpantry.EmptyRecyclerView
            android:id="@+id/schedulerRecycler"
            android:layout_margin="5dp"
            android:layout_width="350dp"
            android:layout_height="200dp"
            />

        <TextView
            android:id="@+id/schedulerRecyclerEmptyMessage"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/scheduler_empty_message"
            />

    </RelativeLayout>

    <AutoCompleteTextView
        android:id="@+id/schedulerRecipeName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/schedulerRecyclerContainer"
        android:hint="@string/scheduler_recipe_name"
        />

    <Button
        android:id="@+id/schedulerCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/schedulerRecipeName"
        android:text="@string/app_cancel_btn"
        />

    <Button
        android:id="@+id/schedulerAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/schedulerRecipeName"
        android:layout_alignParentEnd="true"
        android:text="@string/app_add_btn"
        />



</RelativeLayout>