<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/custom_text_color"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/history_title"
        />

    <apps.nerdyginger.pocketpantry.EmptyRecyclerView
        android:id="@+id/historyRecycler"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/historyTitle"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/historyEmpty"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/historyTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/history_empty_message"
        />

    <Button
        android:id="@+id/historyOkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="525dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/app_ok_btn"
        />


</RelativeLayout>